--- a/css/loading.css
+++ b/css/loading.css
@@ -9,15 +9,22 @@ html, body{
     max-height: 100%;
     margin: 0;
     padding: 0;
+    vertical-align: middle;
 }
 
 .wait-text{
+    position: absolute;
+    top: 50%;
+    margin-top: -80px;
+    
     color: #ffffff;
     font-family: 'Permanent Marker';
-    width: 100%;
-    height: 100%;
+    width: 98%;
+    margin-left: 2%;
+    margin-right: 2%;
     text-align: center;
-    vertical-align: bottom;
-    font-size: 5em;
-    line-height: 5em;
+    font-size: 80px;
+    line-height: 80px; 
+    display: inline-block;
+    
 }
