--- a/css/base.css
+++ b/css/base.css
@@ -10,13 +10,60 @@ html, body{
     height: 100%;
     max-height: 100%;
     max-width: 100%;
-    
+
     background-color: #555555;
+    overflow: hidden;
 }
 
-#canvas{
-    border-radius: 15px;
-    background-color: #ffffff;
+@media only screen and (orientation:portrait){
+    #canvas{
+        margin-top: 4%;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 15px;
+        background-color: #ffffff;
+        box-shadow: 0px 0px 95px 12px rgba(0,0,0,0.75);
+    }
 }
 
+@media only screen and (orientation:landscape){
+    #canvas{
+        position: absolute;
+        top: 50%;
+        margin-left: 4%;
+        border-radius: 15px;
+        background-color: #ffffff;
+        box-shadow: 0px 0px 95px 12px rgba(0,0,0,0.75);
+    }
+}
+
+
+@media only screen and (max-width: 760px){
+    #canvas{
+        width: 320px;
+        height: 240px;
+    }
+
+
+}
+
+@media only screen and (max-width: 760px) and (orientation:landscape){
+    #canvas{
+        margin-top: -120px;
+    }
+}
+
+
+@media only screen and (min-width: 761px){
+    #canvas{
+        width: 640px;
+        height: 480px;
+    }
+}
+
+@media only screen and (min-width: 761px) and (orientation:landscape){
+    #canvas{
+        margin-top: -240px;
+    }
+}
 
