--- a/css/base.css
+++ b/css/base.css
@@ -15,55 +15,31 @@ html, body{
     overflow: hidden;
 }
 
-@media only screen and (orientation:portrait){
+#canvas{
+    border-radius: 15px;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 95px 12px rgba(0,0,0,0.75);
+}
+
+@media (orientation:portrait){
     #canvas{
         margin-top: 4%;
         margin-left: auto;
         margin-right: auto;
-        border-radius: 15px;
-        background-color: #ffffff;
-        box-shadow: 0px 0px 95px 12px rgba(0,0,0,0.75);
+        
+        width: 80vw;
+        height: 60vw;
     }
 }
 
-@media only screen and (orientation:landscape){
+@media (orientation:landscape){
     #canvas{
         position: absolute;
         top: 50%;
         margin-left: 4%;
-        border-radius: 15px;
-        background-color: #ffffff;
-        box-shadow: 0px 0px 95px 12px rgba(0,0,0,0.75);
+        
+        margin-top: -15vw;
+        width: 40vw;
+        height: 30vw;
     }
 }
-
-
-@media only screen and (max-width: 760px){
-    #canvas{
-        width: 320px;
-        height: 240px;
-    }
-
-
-}
-
-@media only screen and (max-width: 760px) and (orientation:landscape){
-    #canvas{
-        margin-top: -120px;
-    }
-}
-
-
-@media only screen and (min-width: 761px){
-    #canvas{
-        width: 640px;
-        height: 480px;
-    }
-}
-
-@media only screen and (min-width: 761px) and (orientation:landscape){
-    #canvas{
-        margin-top: -240px;
-    }
-}
-
