--- a/css/base.css
+++ b/css/base.css
@@ -22,7 +22,7 @@ html, body{
     box-shadow: 0px 0px 95px 12px rgba(0,0,0,0.75);
 }
 
-@media (orientation:landscape){
+@media (orientation:landscape) and (max-width: 1024px), (min-aspect-ratio: 2/1){
     #canvas{
         position: absolute;
         top: 50%;
@@ -48,7 +48,7 @@ html, body{
     }
 }
 
-@media (min-aspect-ratio: 1/1) and (max-aspect-ratio: 29/18){
+@media (min-aspect-ratio: 1/1) and (max-aspect-ratio: 29/18), (min-width: 1024px) and (max-aspect-ratio: 2/1){
     #canvas{
         position: relative;
         top: initial;
@@ -57,7 +57,7 @@ html, body{
         margin-left: auto;
         margin-right: auto;
 
-        width: 50vw;
-        height: 37.5vw;
+        width: 44vw;
+        height: 33vw;
     }
 }
