--- a/css/base.css
+++ b/css/base.css
@@ -22,15 +22,35 @@ html, body{
     box-shadow: 0px 0px 95px 12px rgba(0,0,0,0.75);
 }
 
+#toolbar{
+    position: absolute;
+    background-color: #663300;
+    
+    border: 5px solid #000;
+}
+
+
 @media (orientation:landscape) and (max-width: 1024px), (min-aspect-ratio: 2/1){
     #canvas{
         position: absolute;
         top: 50%;
         margin-left: 2vw;
 
+        margin-top: -43.125vh;
+        width: 115vh;
+        height: 86.25vh;
+    }
+    
+    #toolbar{
+        right: 0;
+        top: 50%;
+        
         margin-top: -45vh;
-        width: 120vh;
+        
         height: 90vh;
+        width: 25%;
+        
+        border-right: none;
     }
 }
 
@@ -46,6 +66,20 @@ html, body{
         width: 90vw;
         height: 67.5vw;
     }
+    
+    #toolbar{
+        bottom: 0;
+        top: 75%;
+        left: -45vw;
+        right: inherit;
+        
+        margin-top: 0;
+        margin-left: 50%;
+        
+        width: 90vw;
+        
+        border-bottom: none;
+    }
 }
 
 @media (min-aspect-ratio: 1/1) and (max-aspect-ratio: 29/18), (min-width: 1024px) and (max-aspect-ratio: 2/1){
@@ -59,5 +93,20 @@ html, body{
 
         width: 44vw;
         height: 33vw;
+    }
+    
+    #toolbar{
+        bottom: 0;
+        top: 75%;
+        left: -22vw;
+        right: inherit;
+        
+        margin-top: 0;
+        margin-left: 50%;
+        
+        width: 44vw;
+        
+        border-bottom: none;
+        
     }
 }
