--- a/css/base.css
+++ b/css/base.css
@@ -30,7 +30,7 @@ html, body{
     position: absolute;
     box-shadow: 0 0 15px #b0b0b0;
     border-radius: 3px;
-    overflow:hidden;
+    overflow:visible;
     background:#e0e0e0;
 }
 
@@ -46,6 +46,9 @@ html, body{
     border-radius: 50%;
     box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
     display: inline-block;
+    
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
 }
 
 
@@ -82,6 +85,7 @@ html, body{
         margin-top: 3.75vh;    
         
         text-align: center;
+        
     }
     
     .color{
