--- a/css/base.css
+++ b/css/base.css
@@ -176,14 +176,14 @@ html, body{
     
     
     #toolbar{
-        margin-top: 1.2vh;
+        margin-top: 1.6vh;
     }
     
     .color{
-       width:  7.8vh;
-       height:  7.8vh;
+       width:  7.5vw;
+       height:  7.5vw;
        
-       margin: 1vh;
+       margin: 0.5vh;
     }
     
 }
