--- a/css/base.css
+++ b/css/base.css
@@ -42,6 +42,11 @@ html, body{
     
 }
 
+#canvas > svg{
+    width: 100%;
+    height: 100%;
+}
+
 .color{
     border-radius: 50%;
     box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
