--- a/css/home.css
+++ b/css/home.css
@@ -27,15 +27,19 @@ html, body{
     position: relative;
 }
 
-@media (min-aspect-ratio: 1/1){
+@media (min-aspect-ratio: 4/3){
     #canvas{
+        top: inherit;
+        left: 50%;
+        margin-left: -66.65vh;
         width: 133.3vh;
         height: 100vh;
     }
 }
 
-@media (max-aspect-ratio: 1/1){
+@media (max-aspect-ratio: 4/3){
     #canvas{
+        top: 12.25%;
         width: 100vw;
         height: 75vw;
     }
